# tgbot-post-broadcaster

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  do  docker-compose.dev.yml  example.env  pyproject.toml  requirements.txt
.run/: Template Python.run.xml  Template Shell Script.run.xml  create DB tables.run.xml  formt code.run.xml  tgbot - start polling.run.xml
app/: Procfile  do  start_polling.py
app/bot/: dbadapter.py  handlers.py  main.py  settings.py  storage.py  utils.py
bot/: dbadapter.py  handlers.py  main.py  settings.py  storage.py  utils.py
